# avix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  tarpaulin-report.json
.agents/: README.md
crates/avix-app/: Cargo.toml
crates/avix-app/src/: index.html  main.rs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/avix-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/avix-app/src-tauri/capabilities/: main.json
crates/avix-app/src-tauri/icons/: icon.icns
crates/avix-app/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/avix-app/src-web/: Cargo.toml
crates/avix-app/src-web/src/: lib.rs  main.rs  routes.rs
crates/avix-app/src/src/: App.js  App.tsx  main.js  main.tsx  styles.css
crates/avix-cli/: Cargo.toml
crates/avix-cli/src/: .gitignore  main.rs  runtime_executor.rs  util.rs
crates/avix-cli/src/commands/: mod.rs  package.rs  server.rs
crates/avix-cli/src/tui/: .app.rs.swp  app.rs  mod.rs  parser.rs  state.rs
crates/avix-client-core/: Cargo.toml
crates/avix-client-core/src/: .state.rs.swp  commands.rs  config.rs  error.rs  lib.rs  notification.rs  persistence.rs  server.rs  server_config.rs  state.rs  trace.rs
crates/avix-client-core/src/atp/: client.rs  dispatcher.rs  event_emitter.rs  mod.rs  types.rs
crates/avix-client-core/src/commands/: spawn_agent.rs
crates/avix-core/: Cargo.toml  official-pubkey.asc
crates/avix-core/benches/: all.rs  memfs.rs  process_table.rs
crates/avix-core/src/: error.rs  lib.rs  trace.rs
crates/avix-core/src/agent_manifest/: git_fetch.rs  installer.rs  loader.rs  manifest_file.rs  mod.rs  resolver.rs  scanner.rs  schema.rs
crates/avix-core/src/auth/: atp_token.rs  mod.rs  service.rs  session.rs  validate.rs
crates/avix-core/src/bootstrap/: executor_factory.rs  mod.rs  phase1.rs  phase2.rs
crates/avix-core/src/cli/: config_init.rs  config_reload.rs  llm.rs  mod.rs  resolve.rs
crates/avix-core/src/config/: auth.rs  crews.rs  fstab.rs  kernel.rs  llm.rs  mod.rs  users.rs
crates/avix-core/src/cron_svc/: loader.rs  mod.rs  runner.rs  scheduler.rs  schema.rs
crates/avix-core/src/exec_svc/: ipc_server.rs  mod.rs  service.rs
crates/avix-core/src/executor/: factory.rs  ipc_dispatch.rs  memory.rs  mock_kernel.rs  mod.rs  prompt.rs  runtime_executor.rs  spawn.rs  stop_reason.rs  syscall_dispatch.rs  tool_manager.rs  tool_registration.rs  validation.rs
crates/avix-core/src/gateway/: acl.rs  config.rs  event_bus.rs  mod.rs  replay.rs  server.rs  translator.rs  validator.rs  vfs_watcher.rs
crates/avix-core/src/history/: mod.rs  record.rs  store.rs
crates/avix-core/src/invocation/: conversation.rs  mod.rs  record.rs  store.rs
crates/avix-core/src/ipc/: client.rs  frame.rs  message.rs  mod.rs  platform.rs  server.rs  transport.rs
crates/avix-core/src/jobs/: event.rs  job.rs  mod.rs  registry.rs  start_job.rs  watch_handler.rs
crates/avix-core/src/kernel/: approval_token.rs  boot.rs  capability_resolver.rs  hil.rs  hil_manager.rs  ipc_server.rs  mod.rs  proc.rs  resource_request.rs
crates/avix-core/src/llm_client/: ipc_client.rs  mod.rs
crates/avix-core/src/llm_svc/: autoagents_client.rs  binary_output.rs  health.rs  http_client.rs  ipc_server.rs  mod.rs  oauth2_refresh.rs  routing.rs  service.rs  sse.rs  usage.rs
crates/avix-core/src/mcp_bridge/: bridge.rs  client.rs  config.rs  connection.rs  meta_tools.rs  mod.rs  runner.rs
crates/avix-core/src/memfs/: context.rs  local_provider.rs  mod.rs  node.rs  path.rs  router.rs  vfs.rs
crates/avix-core/src/memory_svc/: acl.rs  gc.rs  index.rs  mod.rs  schema.rs  search.rs  service.rs  sharing.rs  store.rs  vfs_layout.rs
crates/avix-core/src/packaging/: builder.rs  gpg.rs  mod.rs  scaffold.rs  trust.rs  validator.rs
crates/avix-core/src/params/: constraint.rs  defaults.rs  limits.rs  mod.rs  resolved_file.rs  resolver.rs
crates/avix-core/src/pipe/: channel.rs  config.rs  manager.rs  mod.rs  registry.rs
crates/avix-core/src/process/: entry.rs  mod.rs  status_file.rs  table.rs
crates/avix-core/src/router/: caller.rs  capability.rs  concurrency.rs  dispatcher.rs  ipc_server.rs  mangle.rs  mod.rs  registry.rs
crates/avix-core/src/secrets/: inject.rs  mod.rs  store.rs
crates/avix-core/src/service/: install_receipt.rs  installer.rs  ipc_server.rs  lifecycle.rs  mod.rs  package_source.rs  process.rs  status.rs  token.rs  unit.rs  watchdog.rs  yaml.rs
crates/avix-core/src/session/: entry.rs  mod.rs  persistence.rs  record.rs  store.rs
crates/avix-core/src/signal/: agent_socket.rs  bus.rs  channels.rs  delivery.rs  kind.rs  mod.rs  pipe_payload.rs
crates/avix-core/src/snapshot/: capture.rs  checksum.rs  mod.rs  store.rs
crates/avix-core/tests/: agent_lifecycle.rs  atp_token.rs  auth.rs  bootstrap.rs  cli_config_reload.rs  cli_resolve.rs  config.rs  daemon_boot.rs  gateway_dispatch.rs  gateway_transport.rs  hil.rs  invocation.rs  ipc.rs  ipc_transport.rs  jobs.rs  llm_client.rs  llm_svc.rs  memfs.rs  memory_gc.rs  memory_retrieval.rs  memory_sharing.rs  memory_spawn.rs  memory_svc.rs  memory_vfs.rs  pipe_tools.rs  process_table.rs  router.rs  router_dispatch.rs  runtime_executor.rs  service_lifecycle.rs  session.rs  signal_bus.rs  signal_delivery.rs  signal_interruption.rs  snapshot.rs  syscalls.rs  tool_registry.rs  types.rs  vfs_router.rs
crates/avix-tests-integration/: Cargo.toml
crates/avix-tests-integration/tests/: atp_ws.rs
services/mcp-bridge/: Cargo.toml  manifest.yaml  service.unit  service.yaml
services/mcp-bridge/src/: bridge.rs  client.rs  config.rs  connection.rs  lib.rs  main.rs  meta_tools.rs  runner.rs
services/workspace/: Cargo.toml  manifest.yaml  service.unit  service.yaml
services/workspace/src/: error.rs  handlers.rs  main.rs
services/workspace/tests/: handlers.rs
services/workspace/tools/: workspace-create-project.tool.yaml  workspace-delete.tool.yaml  workspace-info.tool.yaml  workspace-list.tool.yaml  workspace-read.tool.yaml  workspace-search.tool.yaml  workspace-set-default.tool.yaml  workspace-snapshot.tool.yaml  workspace-write.tool.yaml
(+358 files in other folders)
