# Cargo.toml — workspace root
[workspace]
members = [
    "crates/avix-core",
    "crates/avix-client-core",
    "crates/avix-cli",
    "crates/avix-app/src-tauri",
    "crates/avix-app/src-web",
    "crates/avix-docker",
    "crates/avix-tests-integration",
    "services/workspace",
    "services/mcp-bridge",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Avix Contributors"]
license     = "MIT"
repository  = "https://github.com/avix-os/avix"

[workspace.dependencies]
tokio              = { version = "1",   features = ["full"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = { version = "1" }
serde_yaml         = { version = "0.9" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow             = { version = "1" }
thiserror          = { version = "1" }
uuid               = { version = "1",   features = ["v4"] }
hmac               = { version = "0.12" }
sha2               = { version = "0.10" }
hex                = { version = "0.4" }
pgp                 = { version = "0.19" }
chrono             = { version = "0.4", features = ["serde"] }
tempfile           = { version = "3" }
async-trait        = { version = "0.1" }
redb               = { version = "2" }
serial_test        = { version = "3" }
aes-gcm            = { version = "0.10" }
rand               = { version = "0.8" }
base64             = { version = "0.21" }
cron               = { version = "0.12" }
tokio-tungstenite  = { version = "0.24", features = ["native-tls"] }
clap               = { version = "4", features = ["derive"] }
autoagents         = { version = "0.3.6" }
reqwest            = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
axum               = { version = "0.7", features = ["ws"] }
tower              = { version = "0.4" }
tracing-appender   = { version = "0.2" }
flate2             = { version = "1" }
tar                = { version = "0.4" }
walkdir            = { version = "2" }
xz2                = { version = "0.1" }
lazy_static         = { version = "1.4" }
tokio-util         = { version = "0.7", features = ["rt"] }
