[package]
name    = "avix-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "avix-app"
path = "src/main.rs"

[dependencies]
avix-core           = { path = "../avix-core" }
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
