[package]
name    = "avix-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "avix"
path = "src/main.rs"

[dependencies]
avix-core             = { path = "../avix-core" }
avix-client-core      = { path = "../avix-client-core" }
tokio.workspace      = true
serde.workspace       = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace     = true
clap.workspace       = true
tracing.workspace    = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace       = true
chrono.workspace     = true
autoagents           = { version = "0.3.6", features = ["anthropic", "openai", "ollama"] }
ratatui              = "0.26"
crossterm            = "0.27"
reqwest              = { version = "0.12", features = ["json"] }
tokio-tungstenite    = "0.24"
futures-util          = "0.3"