[package]
name    = "avix-client-core"
version.workspace = true
edition.workspace = true

[dependencies]
avix-core      = { path = "../avix-core" }
tokio          = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow         = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["full"] }