[package]
name    = "avix-core"
version.workspace = true
edition.workspace = true

[features]
test-helpers = []

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace    = true
anyhow.workspace     = true
thiserror.workspace  = true
uuid.workspace       = true
hmac.workspace       = true
sha2.workspace       = true
hex.workspace        = true
chrono.workspace     = true
async-trait.workspace = true
redb.workspace        = true
aes-gcm.workspace     = true
rand.workspace        = true
base64.workspace      = true
cron.workspace        = true
tokio-tungstenite.workspace = true
autoagents.workspace        = true
reqwest.workspace           = true
axum.workspace              = true
tower.workspace             = true
futures                     = "0.3"
toml                        = "0.8"

[dev-dependencies]
tempfile.workspace   = true
tokio                = { workspace = true, features = ["test-util"] }
futures              = "0.3"
criterion            = { version = "0.5", features = ["async_tokio"] }
serial_test.workspace = true
async-trait.workspace = true

[[bench]]
name    = "process_table"
harness = false

[[bench]]
name    = "memfs"
harness = false

[[bench]]
name    = "all"
harness = false
