[package]
name = "avix-tests-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
avix-core = { path = "../avix-core" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
portpicker = "0.1"
tempfile = "3"
anyhow = "1"
tracing = "0.1"
futures-util = "0.3"