[package]
name    = "avix-app"
version.workspace = true
edition.workspace = true

[lib]
name = "avix_app"
crate-type = ["lib"]

[[bin]]
name = "avix-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
avix-client-core     = { path = "../../avix-client-core" }
tauri                = { version = "2", features = [] }
tauri-plugin-fs      = "2"
tauri-plugin-http    = "2"
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
uuid.workspace      = true
